--- a/html-chatbot/pagebot/styles.css
+++ b/html-chatbot/pagebot/styles.css
@@ -130,14 +130,14 @@ button {
 
 #open-chatbot-btn {
     position: fixed;
-    bottom: 30px;
+    bottom: 75px;
     right: 30px;
     width: 60px;
-    height: 60px;
-    background-color: #0055FF; /* Helleres, auffälliges Blau */
+    height: 120px;
+    background-color: #007bffc0; /* Helleres, auffälliges Blau */
     color: white;
     border: none;
-    border-radius: 50%;
+    border-radius: 13%;
     font-size: 24px; /* Kleinere Schrift für das Icon */
     cursor: pointer;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); /* Weicherer Schatten */
@@ -145,7 +145,7 @@ button {
 }
 
 #open-chatbot-btn:hover {
-    background-color: #007BFF; /* Dunkleres Blau beim Überfahren */
+    background-color: #007bffc0; /* Dunkleres Blau beim Überfahren */
 }
 
 #user-input {
